js/js.translator/testData/incremental/invalidation/nestedClass/lib1/l1.1.kt
class MyClass {
    class NestedClass {
        inline fun foo() = 1
    }
}
